modules/gdscript/tests/scripts/parser/errors/double_dictionary_comma.gd
func test():
	var dictionary = { hello = "world",, }
